cabal-version:       3.0
name:                moonlight-flow-plan
version:             0.1.0.0
synopsis:            Relational query planning ownership.
description:
  Query plan shapes, atomization, canonicalization, digests, boundary shapes, and validation.
license:             MIT
author:              Blue Rose
maintainer:          bluerose@example.com
category:            Foundation
build-type:          Simple

common shared-properties
  default-language: GHC2024
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wno-missing-import-lists
  default-extensions:
    QuantifiedConstraints
    StrictData
    UndecidableInstances

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules:
    Moonlight.Flow.Plan.Residual
    Moonlight.Flow.Plan.Query.Core
    Moonlight.Flow.Plan.Shape
    Moonlight.Flow.Plan.Shape.Term
    Moonlight.Flow.Plan.Shape.Encode
    Moonlight.Flow.Plan.Shape.Build
    Moonlight.Flow.Plan.Shape.Boundary.Canonical
    Moonlight.Flow.Plan.Shape.CanonicalKey
    Moonlight.Flow.Plan.Physical.Validate
    Moonlight.Flow.Plan.Physical.Planner
    Moonlight.Flow.Plan.Physical.Meta
    Moonlight.Flow.Plan.Compile.Build
    Moonlight.Flow.Plan.Compile.Atomize
  build-depends:
    algebraic-graphs >= 0.8 && < 0.9
    , base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , hashable
    , moonlight-core
    , moonlight-differential:moonlight-differential-index
    , moonlight-flow-key
    , moonlight-flow-model:moonlight-flow-model-delta
    , moonlight-flow-model:moonlight-flow-model-schema
    , moonlight-saturation:core
    , primitive
    , vector
    , data-fix >= 0.3 && < 0.4
