cabal-version:       3.0
name:                moonlight-flow-storage
version:             0.1.0.0
synopsis:            Relational physical storage representations.
description:
  Row blocks, row sets, row-id sets, index tables, and arranged relation/view/store storage.
license:             MIT
author:              Blue Rose
maintainer:          bluerose@example.com
category:            Foundation
build-type:          Simple

common shared-properties
  default-language: GHC2024
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wno-missing-import-lists
  default-extensions:
    QuantifiedConstraints
    StrictData
    UndecidableInstances

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules:
    Moonlight.Flow.Storage.Relation
    Moonlight.Flow.Storage.Store
    Moonlight.Flow.Storage.Plan
    Moonlight.Flow.Storage.Separator
    Moonlight.Flow.Storage.View
    Moonlight.Flow.Storage.Restriction
    Moonlight.Flow.Storage.Materialize

    -- Storage: primitive index state
    Moonlight.Flow.Storage.Index.TupleFormat

    -- Storage: diagnostics
    Moonlight.Flow.Storage.Index.Validate
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , hashable
    , moonlight-core
    , moonlight-delta:moonlight-delta-core
    , moonlight-differential:moonlight-differential-index
    , moonlight-flow-key
    , moonlight-flow-model:moonlight-flow-model-delta
    , moonlight-flow-model:moonlight-flow-model-schema
    , moonlight-flow-plan
    , primitive
    , unordered-containers
    , vector
